<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">60秒素描</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="watting">准备中请稍等...</string>
	<string name="select_pic">请选择图片</string>
	<string name="setting_color_1">素描</string>
	<string name="setting_color_2">淡彩</string>
	<string name="yuzhi1">浅色</string>
	<string name="yuzhi2">中色</string>
	<string name="yuzhi3">深色</string>
	<string name="title">提示</string>
	<string name="gif_record">是否开启gif动画录制</string>
	<string name="pic_save_success">图片已保存到</string>
</resources>
